# freecad-mathmati

./: README.md
ai-render/: LICENSE  README.md  package.xml  pyproject.toml
ai-render/freecad/AIRenderWB/: __init__.py  capture.py  commands.py  dialog.py  init_gui.py  keystore.py  presets.py  results_panel.py  settings.py
ai-render/freecad/AIRenderWB/providers/: __init__.py  base.py  comfyui.py  http_client.py  openai_provider.py  stability.py
model-context/: README.md  SCHEMA.md  package.xml  pyproject.toml
model-context/freecad/ModelContextWB/: __init__.py  commands.py  constraints.py  diff.py  htmlreport.py  init_gui.py  loaders.py  render.py  serialize.py  svgdiff.py
model-context/tools/: modelcontext_diff.py
push-pull/: LICENSE-Code  README.md  package.xml  pyproject.toml
push-pull/freecad/PushPullWB/: __init__.py  commands.py  commit.py  drag_controller.py  face_utils.py  geom.py  init_gui.py  tracker.py
push-pull/submission/: DISCLOSURE.md  addon-index-issue.md
site-context/: README.md  package.xml  pyproject.toml
site-context/freecad/SiteContextWB/: __init__.py  add_location_dialog.py  commands.py  geocode.py  init_gui.py  overpass_client.py  presets.py  projection.py  site_builder.py  terrain.py
site-context/submission/: DISCLOSURE.md  addon-index-issue.md
standards-library/: DATA_PROVENANCE.md  LICENSE-Data  README.md  package.xml  pyproject.toml
standards-library/Resources/Materials/: README.md
standards-library/Resources/Materials/Standard/Metal/Alloys/: EngSTD-AZ31B.FCMat
standards-library/Resources/Materials/Standard/Metal/Aluminum/: EngSTD-2024-T3.FCMat  EngSTD-5052-H32.FCMat  EngSTD-6063-T5.FCMat  EngSTD-6082-T6.FCMat
standards-library/Resources/Materials/Standard/Metal/Copper/: EngSTD-C11000-Copper.FCMat  EngSTD-C36000-Brass.FCMat
standards-library/Resources/Materials/Standard/Metal/Steel/: EngSTD-1018-ColdDrawn.FCMat  EngSTD-17-4PH-H900.FCMat  (+10 more)
standards-library/Resources/Materials/Standard/Thermoplast/: EngSTD-Nylon66.FCMat
standards-library/Resources/Profiles/: profiles.csv
standards-library/freecad/StandardsLibraryWB/: Init.py  __init__.py  commands.py  init_gui.py  sync.py
standards-library/submission/: DISCLOSURE.md  addon-index-issue.md  materials-team-coordination.md
(+40 files in other folders)
