[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad-airender"
version = "0.1.0"
description = "Stylized BYO-key AI image rendering for the FreeCAD 3D viewport (ComfyUI/Stability/OpenAI)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["freecad*"]
