[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad-pushpull"
version = "0.1.0"
description = "SketchUp-style click-face-and-drag direct modeling for FreeCAD PartDesign."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["freecad*"]
