[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad-sitecontext"
version = "0.2.0"
description = "FreeCAD's Add-Location: OSM buildings + terrain site context generator."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["freecad*"]
